[package]
name = "hid-feature"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hidutils"
repository = "https://github.com/hidutils/hid-feature"
description = "HID Feature Report modification utility"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
hidraw = { version = "0.0.7", features = ["unsafe_reports"] }
hidreport = "0.3.0"
hut = "0.2.0"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
